# officemd

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  bump.py  cliff.toml  create_release.sh  dist-workspace.toml  justfile  prek.toml  release-plz.toml  solo.yml
Formula/: officemd_cli.rb
benchmark/: compare.sh  generate-corpus.py  report.py  run.sh  setup-corpus.sh
crates/clap_ai/: CHANGELOG.md  Cargo.toml
crates/clap_ai/src/: ai_mode.rs  help_tree.rs  lib.rs
crates/officemd_cli/: CHANGELOG.md  Cargo.toml  README.md
crates/officemd_cli/src/: main.rs
crates/officemd_cli/tests/: cli_surface.rs
crates/officemd_core/: CHANGELOG.md  Cargo.toml  README.md
crates/officemd_core/src/: format.rs  ir.rs  lib.rs  patch.rs  rels.rs  test_helpers.rs
crates/officemd_core/src/opc/: content_types.rs  mod.rs  package.rs  part.rs  properties.rs  relationships.rs  writer.rs
crates/officemd_csv/: CHANGELOG.md  Cargo.toml  README.md
crates/officemd_csv/src/: error.rs  extract_ir.rs  lib.rs  render.rs  table_ir.rs
crates/officemd_csv/tests/: test_extract.rs
crates/officemd_docling/: CHANGELOG.md  Cargo.toml  README.md
crates/officemd_docling/src/: builder.rs  convert.rs  convert_docx.rs  convert_pdf.rs  convert_pptx.rs  convert_xlsx.rs  lib.rs  model.rs
crates/officemd_docx/: CHANGELOG.md  Cargo.toml  README.md
crates/officemd_docx/src/: error.rs  extract.rs  lib.rs  render.rs  write.rs
crates/officemd_docx/tests/: test_extract.rs  test_python_ir.py  test_python_markdown.py  test_real_world_docx.py
crates/officemd_js/: Cargo.toml  README.md  cli.js  index.cjs  index.d.ts  index.js  package-lock.json  package.json
crates/officemd_js/lib/: diff-html.js  diff-html.ts  diff-terminal.js  diff-terminal.ts  render-ansi.js  render-ansi.ts
crates/officemd_js/npm/darwin-arm64/: README.md  package.json
crates/officemd_js/npm/darwin-x64/: README.md  package.json
crates/officemd_js/npm/linux-arm-gnueabihf/: README.md  package.json
crates/officemd_js/npm/linux-arm64-gnu/: README.md  package.json
crates/officemd_js/npm/linux-arm64-musl/: README.md  package.json
crates/officemd_js/npm/linux-x64-gnu/: README.md  package.json
crates/officemd_js/npm/linux-x64-musl/: README.md  package.json
crates/officemd_js/npm/win32-arm64-msvc/: README.md  package.json
crates/officemd_js/npm/win32-x64-msvc/: README.md  package.json
crates/officemd_js/scripts/: write-esm-wrapper.mjs
crates/officemd_js/src/: lib.rs
crates/officemd_js/tests/: api-surface.test.mjs  cli-selection.test.mjs
crates/officemd_markdown/: CHANGELOG.md  Cargo.toml  README.md
crates/officemd_markdown/src/: lib.rs  parse.rs
crates/officemd_pdf/: CHANGELOG.md  Cargo.toml  README.md
crates/officemd_pdf/src/: lib.rs
crates/officemd_pdf/src/pdf_inspector/: UPSTREAM  detector.rs  glyph_names.rs  mod.rs  structure_tree.rs  text_utils.rs  tounicode.rs  types.rs
crates/officemd_pdf/src/pdf_inspector/extractor/: content_stream.rs  fonts.rs  interpreter.rs  layout.rs  links.rs  mod.rs  xobjects.rs
crates/officemd_pdf/src/pdf_inspector/markdown/: analysis.rs  convert.rs  mod.rs  postprocess.rs  preprocess.rs
crates/officemd_pdf/src/pdf_inspector/tables/: detect_heuristic.rs  detect_lines.rs  detect_rects.rs  detect_struct.rs  financial.rs  format.rs  grid.rs  mod.rs
crates/officemd_pptx/: CHANGELOG.md  Cargo.toml  README.md
crates/officemd_pptx/src/: error.rs  extract.rs  lib.rs  render.rs  write.rs
crates/officemd_pptx/tests/: test_extract.rs  test_pptx_ir.py
crates/officemd_python/: Cargo.toml  README.md  build.rs  pyproject.toml
crates/officemd_python/python/officemd/: __init__.py  _cli.py  _officemd.pyi  diff.py  patching.py  render.py
crates/officemd_python/src/: lib.rs
crates/officemd_python/tests/: test_api_surface.py
crates/officemd_wasm/: Cargo.toml  Makefile  README.md
crates/officemd_wasm/src/: lib.rs
crates/officemd_wasm/www/: index.html  worker.js
crates/officemd_xlsx/: CHANGELOG.md  Cargo.toml  README.md
crates/officemd_xlsx/src/: error.rs  extract_ir.rs  inspect.rs  lib.rs  render.rs  sheet_reader.rs  style_format.rs  table_ir.rs  write.rs
crates/officemd_xlsx/tests/: test_extract.rs  test_markdown.py  test_real_world_xlsx.py  test_xlsx_files.py
crates/tests/rust_snapshots/: Cargo.toml
crates/tests/rust_snapshots/src/: lib.rs
crates/tests/rust_snapshots/tests/: csv.rs  docx.rs  pdf.rs  pdf_inspect.rs  pptx.rs  roundtrip.rs  xlsx.rs
crates/tests/rust_snapshots/tests/snapshots/: csv__showcase_csv_ir.snap  csv__showcase_csv_markdown.snap  docx__showcase_02_docx_ir.snap  docx__showcase_02_docx_markdown.snap  docx__showcase_docx_ir.snap  docx__showcase_docx_markdown.snap  pdf__encoding_heuristic_ir.snap  pdf__encoding_heuristic_markdown.snap  pdf__ocr_graph_ocred_ir.snap  pdf__ocr_graph_ocred_markdown.snap  pdf__ocr_graph_scanned_ir.snap  pdf__ocr_graph_scanned_markdown.snap  pdf__ocr_tagged_textbased_ir.snap  pdf__ocr_tagged_textbased_markdown.snap  pdf__openxml_whitepaper_ir.snap  pdf__openxml_whitepaper_markdown.snap  pdf_inspect__inspect_encoding_heuristic.snap  pdf_inspect__inspect_ocr_graph_ocred.snap  pdf_inspect__inspect_ocr_graph_scanned.snap  pdf_inspect__inspect_ocr_tagged_textbased.snap  pdf_inspect__inspect_openxml_whitepaper.snap  pptx__showcase_pptx_ir.snap  pptx__showcase_pptx_markdown.snap  xlsx__showcase_xlsx_ir.snap  xlsx__showcase_xlsx_markdown.snap  xlsx__trim_all_empty_xlsx_ir.snap  xlsx__trim_all_empty_xlsx_markdown.snap  xlsx__trim_sparse_trailing_xlsx_ir.snap  xlsx__trim_sparse_trailing_xlsx_markdown.snap  xlsx__trim_wide_sparse_xlsx_ir.snap  xlsx__trim_wide_sparse_xlsx_markdown.snap
docs/: architecture.md  migration.md  pdf-visual-replacement-plan.md
examples/rust/: Cargo.toml
integrations/parsebench/: README.md  pyproject.toml
integrations/parsebench/scripts/: classify_non_ocr_pdfs.py
integrations/parsebench/src/parse_bench/inference/pipelines/: officemd_pipelines.py
integrations/parsebench/src/parse_bench/inference/providers/parse/: officemd_local.py
integrations/parsebench/tests/: test_officemd_local.py
(+121 files in other folders)
