[workspace]
resolver = "3"
members = [
  "crates/clap_ai",
  "crates/officemd_core",
  "crates/officemd_markdown",
  "crates/officemd_docx",
  "crates/officemd_xlsx",
  "crates/officemd_csv",
  "crates/officemd_pptx",
  "crates/officemd_pdf",
  "crates/officemd_docling",
  "crates/officemd_cli",
  "crates/officemd_js",
  "crates/officemd_python",
  "crates/officemd_wasm",
  "crates/tests/rust_snapshots",
  "examples/rust",
]
default-members = [
  "crates/clap_ai",
  "crates/officemd_core",
  "crates/officemd_markdown",
  "crates/officemd_docx",
  "crates/officemd_xlsx",
  "crates/officemd_csv",
  "crates/officemd_pptx",
  "crates/officemd_pdf",
  "crates/officemd_docling",
  "crates/officemd_cli",
  "crates/officemd_js",
  "crates/officemd_python",
]

[workspace.package]
edition = "2024"
version = "0.1.6"
license = "MIT"
authors = ["Thomas Aubry"]
repository = "https://github.com/ThomAub/officemd"
homepage = "https://github.com/ThomAub/officemd"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

[workspace.dependencies]
insta = { version = "1.42", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
