[package]
name = "officemd_cli"
version = "0.1.6"
edition.workspace = true
rust-version = "1.93"
description = "CLI for OfficeMD document extraction and markdown rendering"
license = "MIT"
authors = ["Thomas Aubry"]
repository = "https://github.com/ThomAub/officemd"
homepage = "https://github.com/ThomAub/officemd"
documentation = "https://docs.rs/officemd_cli"
readme = "README.md"
keywords = ["officemd", "cli", "docx", "xlsx", "csv"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "officemd"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap-ai = { version = "0.1.6", path = "../clap_ai" }
officemd_core = { version = "0.1.6", path = "../officemd_core", features = ["parallel"] }
officemd_docx = { version = "0.1.6", path = "../officemd_docx" }
officemd_xlsx = { version = "0.1.6", path = "../officemd_xlsx" }
officemd_csv = { version = "0.1.6", path = "../officemd_csv" }
officemd_pptx = { version = "0.1.6", path = "../officemd_pptx" }
officemd_pdf = { version = "0.1.6", path = "../officemd_pdf" }
officemd_markdown = { version = "0.1.6", path = "../officemd_markdown" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2.7"

[dev-dependencies]
officemd_core = { version = "0.1.6", path = "../officemd_core", features = ["test-helpers"] }
insta = { version = "1", features = ["filters"] }
insta-cmd = "0.6"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
