[package]
name = "officemd_csv"
version = "0.1.2"
edition.workspace = true
description = "CSV extraction aligned with OfficeMD markdown output"
license = "MIT"
authors = ["Thomas Aubry"]
repository = "https://github.com/ThomAub/officemd"
homepage = "https://github.com/ThomAub/officemd"
documentation = "https://docs.rs/officemd_csv"
readme = "README.md"
keywords = ["csv", "markdown", "parser", "table", "extractor"]
categories = ["parser-implementations", "text-processing"]

[dependencies]
officemd_core = { version = "0.1.2", path = "../officemd_core" }
officemd_markdown = { version = "0.1.2", path = "../officemd_markdown" }
csv = "1.3"
serde_json = "1"
thiserror = "2.0"
