[package]
name = "officemd_docx"
version = "0.1.0"
edition.workspace = true
description = "DOCX extraction for OfficeMD"
license = "MIT"
authors = ["Thomas Aubry"]
repository = "https://github.com/ThomAub/officemd"
homepage = "https://github.com/ThomAub/officemd"
documentation = "https://docs.rs/officemd_docx"
readme = "README.md"
keywords = ["officemd", "docx", "word", "parser", "markdown"]
categories = ["parser-implementations", "text-processing"]
exclude = ["tests/*.py"]

[dependencies]
officemd_core = { version = "0.1.0", path = "../officemd_core" }
officemd_markdown = { version = "0.1.0", path = "../officemd_markdown" }
quick-xml = "0.37"
zip = "2.2"
thiserror = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
