[package]
name = "officemd_js"
version = "0.1.4"
edition.workspace = true
publish = false
description = "Native Node/Bun bindings for OfficeMD"
license = "MIT"
authors = ["Thomas Aubry"]
repository = "https://github.com/ThomAub/officemd"
homepage = "https://github.com/ThomAub/officemd"
readme = "README.md"
keywords = ["officemd", "javascript", "napi-rs", "xlsx", "csv"]
categories = ["api-bindings", "text-processing"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = "2"
napi-derive = "2"
rayon = "1.10"
serde_json = "1"
officemd_core = { version = "0.1.4", path = "../officemd_core" }
officemd_docx = { version = "0.1.4", path = "../officemd_docx" }
officemd_xlsx = { version = "0.1.4", path = "../officemd_xlsx" }
officemd_csv = { version = "0.1.4", path = "../officemd_csv" }
officemd_pptx = { version = "0.1.4", path = "../officemd_pptx" }
officemd_pdf = { version = "0.1.4", path = "../officemd_pdf" }
officemd_markdown = { version = "0.1.4", path = "../officemd_markdown" }
officemd_docling = { version = "0.1.4", path = "../officemd_docling" }

[build-dependencies]
napi-build = "2"

[dev-dependencies]
zip = "2.2"
