[package]
name = "officemd_markdown"
version = "0.1.6"
edition.workspace = true
description = "Markdown renderer for OfficeMD document IR"
license = "MIT"
authors = ["Thomas Aubry"]
repository = "https://github.com/ThomAub/officemd"
homepage = "https://github.com/ThomAub/officemd"
documentation = "https://docs.rs/officemd_markdown"
readme = "README.md"
keywords = ["officemd", "markdown", "renderer", "docx", "xlsx"]
categories = ["text-processing"]

[dependencies]
officemd_core = { version = "0.1.6", path = "../officemd_core", default-features = false }
regex = "1"
thiserror = "2"
