[package]
name = "officemd_pdf"
version = "0.1.3"
edition.workspace = true
description = "PDF extraction and diagnostics for OfficeMD"
license = "MIT"
authors = ["Thomas Aubry"]
repository = "https://github.com/ThomAub/officemd"
homepage = "https://github.com/ThomAub/officemd"
documentation = "https://docs.rs/officemd_pdf"
readme = "README.md"
keywords = ["pdf", "markdown", "parser", "officemd"]
categories = ["parser-implementations", "text-processing"]

[dependencies]
officemd_core = { version = "0.1.3", path = "../officemd_core" }
officemd_markdown = { version = "0.1.3", path = "../officemd_markdown" }
lopdf = "0.39.0"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
regex = "1.10"
once_cell = "1.19"
ttf-parser = "0.25"

[dev-dependencies]
serde_json = "1"
