[package]
name = "officemd_pptx"
version = "0.1.6"
edition.workspace = true
description = "PPTX extraction for OfficeMD"
license = "MIT"
authors = ["Thomas Aubry"]
repository = "https://github.com/ThomAub/officemd"
homepage = "https://github.com/ThomAub/officemd"
documentation = "https://docs.rs/officemd_pptx"
readme = "README.md"
keywords = ["officemd", "pptx", "powerpoint", "parser", "markdown"]
categories = ["parser-implementations", "text-processing"]
exclude = ["tests/*.py"]

[dependencies]
officemd_core = { version = "0.1.6", path = "../officemd_core", default-features = false }
officemd_markdown = { version = "0.1.6", path = "../officemd_markdown" }
quick-xml = "0.37"
zip = "2.2"
thiserror = "2.0"
serde_json = "1"
