[package]
name = "officemd_pptx"
version = "0.1.7"
edition.workspace = true
description = "PPTX extraction for OfficeMD"
license = "MIT"
authors = ["Thomas Aubry"]
repository = "https://github.com/ThomAub/officemd"
homepage = "https://github.com/ThomAub/officemd"
documentation = "https://docs.rs/officemd_pptx"
readme = "README.md"
keywords = ["officemd", "pptx", "powerpoint", "parser", "markdown"]
categories = ["parser-implementations", "text-processing"]
exclude = ["tests/*.py"]

[dependencies]
officemd_core = { version = "0.1.7", path = "../officemd_core", default-features = false }
officemd_markdown = { version = "0.1.7", path = "../officemd_markdown" }
quick-xml = "0.37"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
thiserror = "2.0"
serde_json = "1"
