[package]
name = "officemd_python"
version = "0.1.5"
edition.workspace = true
publish = false
description = "Native Python bindings for OfficeMD"
license = "MIT"
authors = ["Thomas Aubry"]
repository = "https://github.com/ThomAub/officemd"
homepage = "https://github.com/ThomAub/officemd"
readme = "README.md"
keywords = ["officemd", "python", "pyo3", "xlsx", "csv"]
categories = ["api-bindings", "text-processing"]

[package.metadata.dist]
dist = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
rayon = "1.10"
pyo3 = { version = "0.27.2", features = ["abi3-py312"] }
serde_json = "1"
officemd_core = { version = "0.1.5", path = "../officemd_core" }
officemd_docx = { version = "0.1.5", path = "../officemd_docx" }
officemd_xlsx = { version = "0.1.5", path = "../officemd_xlsx" }
officemd_csv = { version = "0.1.5", path = "../officemd_csv" }
officemd_pptx = { version = "0.1.5", path = "../officemd_pptx" }
officemd_pdf = { version = "0.1.5", path = "../officemd_pdf" }
officemd_markdown = { version = "0.1.5", path = "../officemd_markdown" }
officemd_docling = { version = "0.1.5", path = "../officemd_docling" }

[build-dependencies]
pyo3-build-config = { version = "0.27.2", features = ["resolve-config"] }

[dev-dependencies]
zip = "2.2"
