[package]
name = "officemd_wasm"
version = "0.1.6"
edition.workspace = true
description = "WebAssembly bindings for OfficeMD document extraction"
license = "MIT"
authors = ["Thomas Aubry"]
repository = "https://github.com/ThomAub/officemd"
homepage = "https://github.com/ThomAub/officemd"
readme = "README.md"
keywords = ["officemd", "wasm", "docx", "xlsx", "markdown"]
categories = ["wasm", "text-processing"]
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
officemd_core = { version = "0.1.6", path = "../officemd_core", default-features = false }
officemd_markdown = { version = "0.1.6", path = "../officemd_markdown" }
officemd_docx = { version = "0.1.6", path = "../officemd_docx" }
officemd_xlsx = { version = "0.1.6", path = "../officemd_xlsx" }
officemd_pptx = { version = "0.1.6", path = "../officemd_pptx" }
officemd_pdf = { version = "0.1.6", path = "../officemd_pdf" }
officemd_csv = { version = "0.1.6", path = "../officemd_csv" }
serde_json = "1"

[package.metadata.dist]
dist = false
