[package]
name = "officemd_xlsx"
version = "0.1.6"
edition.workspace = true
description = "XLSX extraction for OfficeMD"
license = "MIT"
authors = ["Thomas Aubry"]
repository = "https://github.com/ThomAub/officemd"
homepage = "https://github.com/ThomAub/officemd"
documentation = "https://docs.rs/officemd_xlsx"
readme = "README.md"
keywords = ["officemd", "xlsx", "excel", "parser", "markdown"]
categories = ["parser-implementations", "text-processing"]
exclude = ["tests/*.py"]

[dependencies]
officemd_core = { version = "0.1.6", path = "../officemd_core", default-features = false }
quick-xml = "0.37"
zip = "2.2"
thiserror = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
officemd_markdown = { version = "0.1.6", path = "../officemd_markdown" }
regex = "1"
